--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "update-template": "update-template https://github.com/rweich/streamdeck-ts-template"
   },
   "dependencies": {
+    "@rweich/streamdeck-formbuilder": "^2.0.0",
     "@rweich/streamdeck-ts": "^4.0.0"
   },
   "devDependencies": {
